fix: article width overflows

--- a/themes/saladict/source/css/_components/_site-article.scss
+++ b/themes/saladict/source/css/_components/_site-article.scss
@@ -1,3 +1,12 @@
+.site-article-wrap {
+  &, & > .section {
+    @media screen and (max-width: $tablet) {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+}
+
 .site-article {
   max-width: $desktop;
   padding-left: 1rem;
